--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -26,15 +26,15 @@
     justify-content: center;
 }
 
-.work__card {
+/* .work__card {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1.25rem;
     border-radius: 1rem;
-}
+} */
 
 .work__img {
-    width: 295px;
+    width: 400px;
     border-radius: 1rem;
     margin-bottom: var(--mb-1);
 }
