--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
     /*Color mode HSL(hue, saturation, lightness)*/
     --hue: 0;
     --sat: 0%;
-    --title-color: hsl(var(--hue), var(--sat), 20%);
-    --title-color-dark: hsl(var(--hue), var(--sat), 0%);
+    --title-color: rgb(31, 49, 59);
+    --title-color-dark: rgba(26, 43, 50, 255);
     --text-color: hsl(var(--hue), var(--sat), 46%);
     --body-color: hsl(var(--hue), var(--sat), 98%);
     --container-color: #fff;
