--- a/src/components/testimonials/testimonial.css
+++ b/src/components/testimonials/testimonial.css
@@ -1,3 +1,7 @@
+.section__title {
+    margin-bottom: 2rem;
+}
+
 .testimonial__container {
     width: 750px;
 }
@@ -11,19 +15,12 @@
 }
 
 .testimonial__img {
-    width: 60px;
-    border-radius: 6rem;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    align-items: center;
+    width: 120px;
     margin-bottom: var(--mb-1);
-}
-
-.testimonial__name {
-    font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: var(--mb-0-25);
-}
-
-.testimonial__description {
-    font-size: var(--small-font-size);
 }
 
 /* Swiper class */
