--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -42,6 +42,18 @@
     display: none;
 }
 
+#reserve-btn {
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.3);
+    color: #505e5d;
+}
+
+#reserve-btn:hover {
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 1);
+    color: #2a302f;
+}
+
 /* Active link */
 .active-link,
 .nav__link:hover {
